--- a/model-quickfix/pom.xml
+++ b/model-quickfix/pom.xml
@@ -1,101 +1,79 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>io.fixprotocol.orchestra.qf</groupId>
-		<artifactId>parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
-	</parent>
-	<artifactId>model-quickfix</artifactId>
-	<description>Message validation</description>
-	<name>${project.groupId}:${project.artifactId}</name>
-	
-	<properties>
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>io.fixprotocol.orchestra.qf</groupId>
+        <artifactId>parent</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+    </parent>
+    <artifactId>model-quickfix</artifactId>
+    <description>Message validation</description>
+    <name>${project.groupId}:${project.artifactId}</name>
+    
+    <properties>
         <orchestra.file>OrchestraEP255.xml</orchestra.file>
     </properties>
-	
-	
-	<dependencies>
-		<dependency>
-			<groupId>io.fixprotocol.orchestra</groupId>
-			<artifactId>message-model</artifactId>
-			<version>${orchestra.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>io.fixprotocol.orchestra.qf</groupId>
-			<artifactId>repository-quickfix</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.quickfixj</groupId>
-			<artifactId>quickfixj-core</artifactId>
-			<version>${quickfixj.version}</version>
-		</dependency>
+    
+    
+    <dependencies>
         <dependency>
-            <groupId>io.fixprotocol.orchestrations</groupId>
-            <artifactId>fix-standard</artifactId>
-        </dependency>		
-		<!-- not required for Java 8 -->
-   		<dependency>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
-            <version>2.3.1</version>
-            <optional>true</optional>
+            <groupId>io.fixprotocol.orchestra</groupId>
+            <artifactId>message-model</artifactId>
+            <version>${orchestra.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.sun.xml.bind</groupId>
-            <artifactId>jaxb-core</artifactId>
-            <version>2.3.0.1</version>
-            <optional>true</optional>
+            <groupId>io.fixprotocol.orchestra.qf</groupId>
+            <artifactId>repository-quickfix</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.sun.xml.bind</groupId>
-            <artifactId>jaxb-impl</artifactId>
-            <version>2.3.2</version>
-            <optional>true</optional>
+            <groupId>org.quickfixj</groupId>
+            <artifactId>quickfixj-orchestration</artifactId>
+            <classifier>resources</classifier>
+            <version>${quickfixj.version}</version>
         </dependency>
         <dependency>
-            <groupId>javax.activation</groupId>
-            <artifactId>activation</artifactId>
-            <version>1.1.1</version>
-            <optional>true</optional>
+            <groupId>org.quickfixj</groupId>
+            <artifactId>quickfixj-core</artifactId>
+            <version>${quickfixj.version}</version>
         </dependency>
         <dependency>
-            <groupId>javax.annotation</groupId>
-            <artifactId>javax.annotation-api</artifactId>
-            <version>1.3.2</version>
-            <optional>true</optional>
+            <groupId>org.quickfixj</groupId>
+            <artifactId>quickfixj-messages-fixt11</artifactId>
+            <version>${quickfixj.version}</version>
         </dependency>
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-engine</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-params</artifactId>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
+        <!-- not required for Java 8 -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
-	<build>
-		<plugins>
+    <build>
+        <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
                 <executions>
                     <execution>
                         <id>unpack-dependencies</id>
-                        <phase>process-sources</phase>
+                        <phase>initialize</phase>
                         <goals>
                             <goal>unpack</goal>
                         </goals>
                         <configuration>
                             <artifactItems>
                                 <artifactItem>
-                                    <groupId>io.fixprotocol.orchestrations</groupId>
-                                    <artifactId>fix-standard</artifactId>
+                                   <groupId>org.quickfixj</groupId>
+                                    <artifactId>quickfixj-orchestration</artifactId>
+                                    <classifier>resources</classifier>
                                     <includes>**/Fix*.xml,**/Orchestra*.xml</includes>
                                     <outputDirectory>${project.build.directory}/dependency/repository</outputDirectory>
                                 </artifactItem>            
@@ -105,83 +83,77 @@
                 </executions>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-toolchains-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+            </plugin>
+            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
-                <artifactId>xml-maven-plugin</artifactId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.6.0</version>
                 <executions>
-                  <execution>
-                    <id>cleanOrchestraRepo</id>
-                    <phase>generate-resources</phase>
-                    <goals>
-                      <goal>transform</goal>
-                    </goals>
-                    <configuration>
-                      <transformationSets>
-                        <transformationSet>
-                          <dir>${project.build.directory}/dependency/repository</dir>
-                          <outputDir>${project.build.directory}/generated-resources/repository</outputDir>
-                          <includes>
-                            <include>${orchestra.file}</include>
-                          </includes>
-                          <stylesheet>${project.basedir}/src/main/xsl/extractForQuickFIXJ.xsl</stylesheet>
-                         </transformationSet>
-                       </transformationSets>
-                    </configuration>
-                  </execution>
+                    <execution>
+                        <id>generate-quickfix</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                    </execution>
                 </executions>
-            </plugin>            		
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-toolchains-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>exec-maven-plugin</artifactId>
-				<version>1.6.0</version>
-				<executions>
-					<execution>
-						<id>generate-quickfix</id>
-						<phase>generate-test-sources</phase>
-						<goals>
-							<goal>java</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<mainClass>io.fixprotocol.orchestra.quickfix.CodeGeneratorJ</mainClass>
-					<arguments>
-						<argument>${project.build.directory}/generated-resources/repository/OrchestraEP255.xml</argument>
-						<argument>${project.build.directory}/generated-test-sources/java/</argument>
-					</arguments>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>build-helper-maven-plugin</artifactId>
-				<version>3.0.0</version>
-				<executions>
-					<execution>
-						<id>add-test-source</id>
-						<phase>generate-test-sources</phase>
-						<goals>
-							<goal>add-test-source</goal>
-						</goals>
-						<configuration>
-							<sources>
-								<source>${project.build.directory}/generated-test-sources/java/</source>
-							</sources>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
-	
+                <configuration>
+                    <mainClass>io.fixprotocol.orchestra.quickfix.CodeGeneratorJ</mainClass>
+                    <arguments>
+                        <argument>${project.build.directory}/dependency/repository/OrchestraEP255.xml</argument>
+                        <argument>${project.build.directory}/generated-test-sources/java/</argument>
+                    </arguments>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <id>add-test-source</id>
+                        <phase>generate-test-sources</phase>
+                        <goals>
+                            <goal>add-test-source</goal>
+                        </goals>
+                        <configuration>
+                            <sources>
+                                <source>${project.build.directory}/generated-test-sources/java/</source>
+                            </sources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.jboss.tattletale</groupId>
+                <artifactId>tattletale-maven</artifactId>
+                <executions>
+                    <execution>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <!-- This is the location which will be scanned for generating tattletale 
+                        reports -->
+                    <source>${project.build.directory}</source>
+                    <!-- This is where the reports will be generated -->
+                    <destination>${project.build.directory}/tattle-tale-report</destination>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    
 </project>
